--- a/app/views/tickets/new.slim
+++ b/app/views/tickets/new.slim
@@ -4,15 +4,20 @@ h1 Ticket#new
   div
     = form.label :description
     = form.text_field :description
+    - @ticket.errors.full_messages_for(:descripton).each do |error|
+      p=error
 
   div
     = form.label :pr_url
     = form.text_field :pr_url
+    - @ticket.errors.full_messages_for(:pr_url).each do |error|
+      - if !error.empty?
+        p=error
 
   div
     = form.label :ticket_url
     = form.text_field :ticket_url
-  
+
   div
     = form.label :status
     = form.text_field :status
