--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -10,4 +10,5 @@ html
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
 
   body
+    = render "layouts/navbar"
     = yield
