--- a/app/views/tickets/_new.slim
+++ b/app/views/tickets/_new.slim
@@ -1,30 +1,14 @@
-h1 Ticket#new
+.container 
+  h1 New Ticket
 
-= form_with model: @ticket, id: "new-ticket" do |form|
-  div
-    = form.label :description
-    = form.text_field :description
-    - @ticket.errors.full_messages_for(:descripton).each do |error|
-      p=error
-
-  div
-    = form.label :pr_url
-    = form.text_field :pr_url
-    - @ticket.errors.full_messages_for(:pr_url).each do |error|
-      - if !error.empty?
-        p=error
-
-  div
-    = form.label :ticket_url
-    = form.text_field :ticket_url
-
-  div
-    = form.label :status
-    = form.text_field :status
-
-  div
-    = form.label :notes
-    = form.text_field :notes
-
-  div
-    = form.submit
+  form
+    .form-group
+      = text_field_tag :status_field, nil, placeholder: "Status", class: "form-control-lg"
+      br
+      = text_field_tag :pr_url_field, nil, placeholder: "PR URL", class: "form-control-lg"
+      br
+      = text_field_tag :ticket_url_field, nil, placeholder: "Ticket URL", class: "form-control-lg"
+      br
+      = text_field_tag :status_field, nil, placeholder: "Status", class: "form-control-lg"
+      br
+      = text_field_tag :notes_field, nil, placeholder: "Notes", class: "form-control-lg"
