Finished fetch request from tickets index JS

--- a/app/views/tickets/_new.slim
+++ b/app/views/tickets/_new.slim
@@ -11,4 +11,4 @@
       br
       = text_field_tag :notes_field, nil, placeholder: "Notes", class: "form-control-lg"
       br
-      button.new-ticket-submit.btn.btn-primary[type="aubmit"]= "Submit"
+      button.new-ticket-submit.btn.btn-primary[type="submit" data-tickets-url=tickets_url]= "Submit"
