--- a/app/views/tickets/index.slim
+++ b/app/views/tickets/index.slim
@@ -8,16 +8,17 @@
   .new-ticket-form
     = render partial: "new", locales: @tickets
 
-  - @tickets.each do |ticket|
-    .card
-      .card-body
-        .card-title
-          h4= ticket.description
-        .card-text
-          ul.list-group
-            li.list-group-item= "Status: #{ticket.status}"
-            li.list-group-item= "PR:     #{ticket.pr_url}"
-            li.list-group-item= "Ticket: #{ticket.ticket_url}"
-            li.list-group-item= "Update: #{ticket.notes}"
+  .tickets
+    - @tickets.each do |ticket|
+      .card
+        .card-body
+          .card-title
+            h4= ticket.description
+          .card-text
+            ul.list-group
+              li.list-group-item= "Status: #{ticket.status}"
+              li.list-group-item= "PR:     #{ticket.pr_url}"
+              li.list-group-item= "Ticket: #{ticket.ticket_url}"
+              li.list-group-item= "Update: #{ticket.notes}"
 
 = javascript_pack_tag 'tickets_index'
