--- a/app/views/tickets/new.slim
+++ b/app/views/tickets/new.slim
@@ -1,8 +1,11 @@
 .container
   h1 New Ticket
+
+  - if @ticket.errors.present?
+    h2= pluralize(@ticket.errors.count, "error ") + "prevented this ticket from being saved"
   
   = bootstrap_form_with model: @ticket, html: { class: "form-group" } do |form|
-    = form.text_field :descrpition, class: "form-control-l"
+    = form.text_field :description, class: "form-control-l"
     br
     = form.text_field :status, class: "form-control-l" 
     br
