--- a/app/views/layouts/application.slim
+++ b/app/views/layouts/application.slim
@@ -1,7 +1,7 @@
 DOCTYPE html
 html
   head
-    title Deva
+    title MooseGrim
     meta name="viewport" content="width=device-width,initial-scale=1"
     = csrf_meta_tag
     = csp_meta_tag
